# WaterPoloStats

./: .replit  README.md  init_db.py  main.py  models.py  previous_games.json  pyproject.toml  replit.nix  score_game.html  sentence.txt  team_permissions.json  team_rosters.json
attached_assets/: Pasted--2024-12-28-02-40-34-0000-103-INFO-Starting-gunicorn-21-2-0-2024-12-28-02-40-34-0000-103--1735353656618.txt  Pasted--2025-01-01-04-11-38-0000-4714-INFO-Shutting-down-Master-2025-01-01-04-11-38-0000-5382--1735704719715.txt  Pasted--2025-01-01-04-45-59-0000-15300-INFO-Starting-gunicorn-21-2-0-2025-01-01-04-45-59-0000-153-1735706771645.txt  Pasted--2025-01-01-04-49-36-0000-17375-INFO-Starting-gunicorn-21-2-0-2025-01-01-04-49-36-0000-173-1735707130103.txt  Pasted--2025-01-01-04-55-40-0000-17677-INFO-Shutting-down-Master-2025-01-01-04-55-40-0000-18603-1735707522426.txt  Pasted--2025-01-02-02-06-28-0000-2312-INFO-Starting-gunicorn-21-2-0-2025-01-02-02-06-28-0000-2312-1735783598136.txt  Pasted--2025-01-02-02-07-06-0000-2517-INFO-Starting-gunicorn-21-2-0-2025-01-02-02-07-06-0000-2517-1735783638676.txt  Pasted--2025-01-02-04-24-47-0000-19231-INFO-Starting-gunicorn-21-2-0-2025-01-02-04-24-47-0000-192-1735792049288.txt  Pasted--2025-01-02-23-08-49-0000-2280-INFO-Starting-gunicorn-21-2-0-2025-01-02-23-08-49-0000-2280-1735859377442.txt  Pasted--2025-01-03-18-44-45-0000-5583-INFO-Shutting-down-Master-2025-01-03-18-44-45-0000-5763--1735929985307.txt  Pasted--2025-01-03-18-46-48-0000-6106-INFO-Starting-gunicorn-21-2-0-2025-01-03-18-46-48-0000-6106-1735930118068.txt  (+14 more)
templates/: base.html  (+17 more)
(+24 files in other folders)
